# h5peek

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
data/: sample.h5
script/: generate_sample.py
src/: array_format.rs  completer.rs  dataset.rs  json_output.rs  main.rs  plot.rs  slicing.rs  tree.rs  utils.rs
tests/: cli.rs  common.rs
