[package]
name = "h5peek"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for inspecting HDF5 file structures and metadata"
license = "MIT"
repository = "https://github.com/tmichela/h5peek"
readme = "README.md"
keywords = ["hdf5", "cli", "visualization", "inspect", "data"]
categories = ["command-line-utilities", "visualization", "science"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
hdf5 = { package = "hdf5-metno", version = "0.12.1" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11.1" }
ndarray = "0.17"
pager = "0.16.1"
regex = "1.12.2"
rustyline = "17.0.2"
globset = "0.4.16"
natord = "1.0.9"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"

[[bin]]
name = "h5peek"
path = "src/main.rs"
